# YFTP

./: AsioIOServicePool.cpp  CommandParser.hpp  ConfigManager.hpp  LogicSystem.cpp  LogicSystem.hpp  Makefile  MsgNode.hpp  README.md  Server.cpp  Server.hpp  Session.cpp  Session.hpp  config.json  const.hpp  main  main.cpp
client/: CMakeLists.txt  Makefile  main.cpp  test.cpp  yftp_client
client/include/: ClientSession.hpp  CompressUtil.hpp  FileUtil.hpp  MsgNode.hpp  YFTPClient.hpp  cli.hpp  const.hpp
client/src/: main.cpp
include/: ConfigManager.hpp  FileUtil.hpp  LogicSystem.hpp  MsgNode.hpp  Singleton.hpp  const.hpp  logger.hpp
server/: CMakeLists.txt  config.json
server/include/: AsioIOServicePool.hpp  CommandParser.hpp  CompressUtil.hpp  FileUtil.hpp  Lister.hpp  LogicSystem.hpp  Server.hpp  Session.hpp  const.hpp  logger.hpp
server/src/: AsioIOServicePool.cpp  LogicSystem.cpp  MsgNode.cpp  Server.cpp  Session.cpp  main.cpp
server/tests/CommandParser/: test.cpp  test_CommandParser
server/tests/FileUtil/: test_FileUtil  test_FileUtil.cpp
src/: AsioIOServicePool.cpp  LogicSystem.cpp  Server.cpp  Session.cpp  main.cpp
tests/CommandParser/: Makefile
tests/ConfigManager/: Makefile  config_manager_test  test_ConfigManager.cpp
tests/FileUtil/: Makefile
